--- a/src/android/UniNotifier_ru_ru.resx
+++ b/src/android/UniNotifier_ru_ru.resx
@@ -139,7 +139,10 @@
     <value>Оставить службу активной после выхода</value>
   </data>
   <data name="AllowStartTip" xml:space="preserve">
-    <value>Если закреплённое оповещение {0:S} отсутствует в верхней части экрана, эта опция потребует перезапуска приложения</value>
+    <value>Если закреплённое оповещение {0:S} отсутствует в верхней части экрана, эта опция потребует перезапуска приложения.
+
+В Android 12 и выше отсутствует адекватная реализация перехода к приложению при нажатии на оповещение. Поэтому для возвращения в приложение необходимо будет запустить его заново. Оповещение в данной версии ОС лишь помогает ускорить его запуск
+</value>
   </data>
   <data name="AllowVibroLabel" xml:space="preserve">
     <value>Вибрация</value>
@@ -238,6 +241,9 @@
   </data>
   <data name="LaunchMessage" xml:space="preserve">
     <value>Служба оповещений находится в режиме наблюдения. Нажмите на это сообщение, чтобы перейти к журналу приложения</value>
+  </data>
+  <data name="LaunchMessageA13" xml:space="preserve">
+    <value>Служба оповещений находится в режиме наблюдения</value>
   </data>
   <data name="LinkFieldLabel" xml:space="preserve">
     <value>Ссылка и
@@ -432,45 +438,45 @@
 
 Не забудьте установить для них подходящие звуки</value>
   </data>
-  <data name="Tip04_1" xml:space="preserve">
+  <data name="Tip04_0004" xml:space="preserve">
     <value>Эта кнопка позволяет применить изменения, выполненные ниже, к текущему выбранному уведомлению</value>
   </data>
-  <data name="Tip04_10" xml:space="preserve">
-    <value>Эта опция позволяет открыть источник выбранного уведомления в браузере</value>
-  </data>
-  <data name="Tip04_11" xml:space="preserve">
-    <value>Эта кнопка позволяет выбрать уведомление для настройки</value>
-  </data>
-  <data name="Tip04_13" xml:space="preserve">
-    <value>Если этот флажок включён, фоновая служба останется активной, когда приложение будет закрыто или свёрнуто. Это позволяет быстрее вызывать его при необходимости (через закреплённое оповещение), а также видеть число непрочитанных записей в журнале</value>
-  </data>
-  <data name="Tip04_15" xml:space="preserve">
-    <value>В некоторых случаях нужный участок веб-страницы оказывается на ней не первым, который ограничен заданными маркерами. Это поле позволяет указать, какое именно вхождение целевого участка (от начала страницы) следует отображать</value>
-  </data>
-  <data name="Tip04_18" xml:space="preserve">
-    <value>Все операции с текстами уведомлений доступны по клику на них в главном журнале</value>
-  </data>
-  <data name="Tip04_2" xml:space="preserve">
+  <data name="Tip04_0008" xml:space="preserve">
     <value>Эта кнопка позволяет поделиться настройками уведомлений</value>
   </data>
-  <data name="Tip04_20" xml:space="preserve">
+  <data name="Tip04_0010" xml:space="preserve">
+    <value>Эта кнопка позволяет удалить выбранное уведомление</value>
+  </data>
+  <data name="Tip04_0020" xml:space="preserve">
+    <value>Эти опция позволяет поделиться текстом уведомления.
+
+Обратите внимание, что приложение добавляет к оповещениям, которыми Вы делитесь, ссылки на источники информации (в целях соблюдения прав авторов). Рекомендуется не удалять их при распространении текстов с помощью этой функции</value>
+  </data>
+  <data name="Tip04_0040" xml:space="preserve">
+    <value>Эта опция позволяет открыть источник выбранного уведомления в браузере</value>
+  </data>
+  <data name="Tip04_0080" xml:space="preserve">
+    <value>Эта кнопка позволяет выбрать уведомление для настройки</value>
+  </data>
+  <data name="Tip04_0100" xml:space="preserve">
+    <value>Если этот флажок включён, фоновая служба останется активной, когда приложение будет закрыто или свёрнуто. Это позволяет быстрее вызывать его при необходимости (через закреплённое оповещение), а также видеть число непрочитанных записей в журнале</value>
+  </data>
+  <data name="Tip04_0200" xml:space="preserve">
+    <value>В некоторых случаях нужный участок веб-страницы оказывается на ней не первым, который ограничен заданными маркерами. Это поле позволяет указать, какое именно вхождение целевого участка (от начала страницы) следует отображать</value>
+  </data>
+  <data name="Tip04_0400" xml:space="preserve">
+    <value>Все операции с текстами уведомлений доступны по клику на них в главном журнале</value>
+  </data>
+  <data name="Tip04_0800" xml:space="preserve">
     <value>Эта функция позволяет установить числовой порог. Он будет сравниваться с первым числом в каждом полученном тексте с использованием указанного метода сравнения. Если новый текст соответствует условию, приложение отобразит срочное уведомление.
 
 Также возможно отображение уведомления только при соблюдении этого условия</value>
   </data>
-  <data name="Tip04_22" xml:space="preserve">
+  <data name="Tip04_1000" xml:space="preserve">
     <value>Эти переключатели позволяют указать, какие способы индикации следует использовать приложению при появлении непрочитанных элементов</value>
   </data>
-  <data name="Tip04_25" xml:space="preserve">
+  <data name="Tip04_2000" xml:space="preserve">
     <value>Этот переключатель позволяет экрану оставаться активным, пока Вы читаете тексты уведомлений (т. е. пока приложение открыто)</value>
-  </data>
-  <data name="Tip04_4" xml:space="preserve">
-    <value>Эта кнопка позволяет удалить выбранное уведомление</value>
-  </data>
-  <data name="Tip04_7" xml:space="preserve">
-    <value>Эти опция позволяет поделиться текстом уведомления.
-
-Обратите внимание, что приложение добавляет к оповещениям, которыми Вы делитесь, ссылки на источники информации (в целях соблюдения прав авторов). Рекомендуется не удалять их при распространении текстов с помощью этой функции</value>
   </data>
   <data name="TipHeader01" xml:space="preserve">
     <value>Подсказка</value>
