--- a/src/android/UniNotifier_ru_ru.resx
+++ b/src/android/UniNotifier_ru_ru.resx
@@ -160,7 +160,7 @@
     <value>Пожалуйста, дождитесь ответа всех оповещений...</value>
   </data>
   <data name="BackgroundRequestOn" xml:space="preserve">
-    <value>Шаг фонового опроса, минут: &lt;b&gt;{0:D}&lt;/b&gt;</value>
+    <value>Шаг фонового опроса,&lt;br&gt;минут: &lt;b&gt;{0:D}&lt;/b&gt;</value>
   </data>
   <data name="BeginningFieldMessage" xml:space="preserve">
     <value>Признак начала текста оповещения</value>
@@ -224,11 +224,11 @@
   <data name="FirstSetupMessage" xml:space="preserve">
     <value>Главный журнал пуст.
 
-• Смахните этот экран влево, чтобы добавить новые веб-ресурсы для наблюдения, если это ещё не сделано.
+• Нажмите кнопку меню (≡) и выберите «Настройки приложения», чтобы добавить новые веб-ресурсы для наблюдения, если это ещё не было сделано.
 
 • По завершении включите фоновую службу и закройте приложение, чтобы начать наблюдение.
 
-• Подробная инструкция по настройке службы доступна на YouTube. Смахните этот экран влево (до конца) и выберите «Справочные материалы» → «Видеоруководство проекта» для просмотра</value>
+• Подробная инструкция по настройке службы доступна на YouTube. Нажмите кнопку меню (≡) в главном журнале и выберите «О приложении» →  «Справочные материалы» → «Видеоруководство проекта» для её просмотра</value>
   </data>
   <data name="FontSizeLabel" xml:space="preserve">
     <value>Размер шрифта в журнале: &lt;b&gt;{0:D}&lt;/b&gt;</value>
@@ -246,7 +246,8 @@
     <value>Индикация только срочных уведомлений</value>
   </data>
   <data name="KeepScreenOnLabel" xml:space="preserve">
-    <value>Запретить переход в спящий режим, пока приложение открыто</value>
+    <value>Запретить переход в спящий режим,
+пока приложение открыто</value>
   </data>
   <data name="LaunchMessage" xml:space="preserve">
     <value>Служба оповещений находится в режиме наблюдения. Нажмите на это сообщение, чтобы перейти к журналу приложения</value>
@@ -428,12 +429,12 @@
   <data name="Tip01" xml:space="preserve">
     <value>Добро пожаловать в uNot – службу наблюдения за веб-ресурсами!
 
-• На этой странице Вы можете настраивать созданные ранее уведомления.
+• На этой странице Вы можете настраивать созданные ранее уведомления. Каждая кнопка снабжена одноразовой подсказкой.
 
-• Смахните этот экран вправо, чтобы задать параметры службы и добавить новые ресурсы для наблюдения</value>
+• Используйте системную кнопку «Назад», чтобы вернуться к главному журналу уведомлений из любого раздела</value>
   </data>
   <data name="Tip02" xml:space="preserve">
-    <value>• Подробная инструкция по настройке службы доступна на YouTube. Смахните этот экран влево (до конца) и выберите «Справочные материалы» → «Видеоруководство проекта» для её просмотра.
+    <value>• Подробная инструкция по настройке службы доступна на YouTube. Нажмите кнопку меню (≡) в главном журнале и выберите «О приложении» →  «Справочные материалы» → «Видеоруководство проекта» для её просмотра.
 
 • Главный журнал уведомлений доступен на первой странице приложения. Он будет открываться при каждом следующем вызове службы</value>
   </data>
@@ -445,7 +446,9 @@
 • Также некоторые операционные системы содержат индивидуальные настройки экономии заряда батареи, очистки памяти и «закрепления» приложений в области уведомлений. Добавьте приложение в исключения и закрепите его, чтобы устройство не закрывало его принудительно в режиме ожидания</value>
   </data>
   <data name="Tip03_2" xml:space="preserve">
-    <value>Также ваше устройство требует ручного разрешения звуков, подсветки и вибрации для уведомлений. При необходимости выберите их в настройках системы. Фоновая служба должна быть включена, иначе настройки будут недоступны.
+    <value>Важно!
+
+Ваше устройство требует ручного разрешения звуков, подсветки и вибрации для уведомлений. При необходимости выберите их в настройках системы. Фоновая служба должна быть включена, иначе настройки будут недоступны.
 
 Приложение создаёт два канала оповещений:
 • для срочных уведомлений (которые требуют индикации);
