--- a/src/UniNotifier_ru_ru.resx
+++ b/src/UniNotifier_ru_ru.resx
@@ -205,7 +205,7 @@
 С уважением, Nicolay B. aka RD AAOW</value>
   </data>
   <data name="Tip_0001" xml:space="preserve">
-    <value>Добро пожаловать в uNot – службу наблюдения за состоянием веб-ресурсов! Здесь вы можете настроить службу и сами уведомления. Некоторые кнопки и поля содержат полезные подсказки, которые будут показаны однократно.
+    <value>Добро пожаловать в UniNotifier – службу наблюдения за состоянием веб-ресурсов! Здесь вы можете настроить службу и сами уведомления. Некоторые кнопки и поля содержат полезные подсказки, которые будут показаны однократно.
 
 Подробные инструкции по настройке сервиса доступны на YouTube (кнопка «Руководство» в окне сведений о приложении)</value>
   </data>
